fix(offer): set maximum offer image saturation on mobile devices

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -1486,6 +1486,11 @@ footer {
 
 @media(max-width: 1279px)
 {
+  .fifty {
+    .offer-img {
+      filter: saturate(1);
+    }
+  }
   .voivodeships {
     .row {
       .thirty {
